test/parallel/single/waynew/simple0.good
simple0.chpl:6: error: halt reached - ***Error: single var already defined***
